# power_puddle

./: .gitignore  README.md  main.py  pyproject.toml
api/: energy_api.py  puddle_api.py  requirements.txt  start_api.sh
api/endpoints/: carbon_intensive_plants.py  carbon_plants.py  il_data_centers.py  il_datacenter_impact.py  il_datacenter_plant_proximity.py  il_power_plants.py  mart_actual_vs_forecast.py  mart_monthly.py  us_monthly_generation.py
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/models/: schema.yml  sources.yml
dbt/models/marts/: dashboard_carbon_intensive_plants.sql  dashboard_county_energy_datacenter_density.sql  dashboard_datacenter_plant_proximity.sql  dashboard_il_datacenters.sql  dashboard_il_power_plants.sql  dashboard_illinois_clean_energy_datacenter.sql  dashboard_illinois_datacenter_impact.sql  dim_data_center.sql  dim_data_centers.sql  dim_fuel.sql  dim_plant.sql  dim_time.sql  fact_generation.sql  mart_actual_vs_forecast.sql  mart_actual_vs_forecast_by_name.sql  mart_monthly_generation_summary.sql
dbt/models/staging/: _staging.yml  stg_monthly_gen.sql  stg_monthly_gen_nuc.sql
flows/: etl_flows.py
grafana/dashboards/: actual_vs_forecast.json  combo_dashboard.json  il_data_centers_and_power_plants.json  il_monthly_power_generation.json  us_monthly_generation_trends.json
grafana/scripts/: setup_datasources.py  start_grafana.sh
notebooks/: 00_recon.ipynb
src/etl/: data_centers.py  excel.py  fetch_il_data_centers.py  init_duckdb_from_pudl_nuke.py  main.py  pjm.py  pudl.py  util.py
tests/: no_missing_months.sql
