[project]
name = "power-puddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dbt-core>=1.10.11",
    "dbt-duckdb>=1.9.6",
    "duckdb>=1.3.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "prefect>=3.4.17",
    "pyarrow>=21.0.0",
    "selenium>=4.35.0",
]
